k8s/prod/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-backend
  namespace: support-chat-prod
  labels:
    app: chat-backend
    environment: prod

spec:
  replicas: 1

  selector:
    matchLabels:
      app: chat-backend

  template:
    metadata:
      labels:
        app: chat-backend
        environment: prod

    spec:
      containers:

        - name: backend

          image: ghcr.io/taziim/support-chat-backend:prod-initial

          ports:
            - containerPort: 5000

          readinessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 20
