k8s/prod/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: chat-backend
  namespace: support-chat-prod

spec:
  selector:
    app: chat-backend

  ports:
    - port: 5000
      targetPort: 5000

  type: ClusterIP
