k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: support-chat
  namespace: support-chat-prod
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"

spec:
  ingressClassName: nginx

  rules:
    - host: prod.chat.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chat-frontend
                port:
                  number: 80

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: chat-backend
                port:
                  number: 5000

          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: chat-backend
                port:
                  number: 5000
